Run on Java11, HotSpot or Native, Desktop and Embedded, and create snapshot