@@ -7,54 +7,38 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <javac.source>1.8</javac.source>
-        <javac.target>1.8</javac.target>
-
-        <openjfx.version>15.0.1</openjfx.version>
+        <main.class>com.chrisnewland.demofx.DemoFXApplication</main.class>
+        <maven.compiler.release>11</maven.compiler.release>
+        <javafx.version>17-ea+11</javafx.version>
+        <javafx.plugin.version>0.0.6</javafx.plugin.version>
+        <client.plugin.version>0.1.42</client.plugin.version>
+        <commandlineArgs.space.options>-e=colourbackground-triangles -c=1000 -t=30</commandlineArgs.space.options>
+        <commandlineArgs.options>-e=colourbackground-triangles,-c=1000,-t=30,-Xmx50m</commandlineArgs.options>
+        <runtime.jvm.options>--add-exports=javafx.media/com.sun.media.jfxmedia.control=ALL-UNNAMED,-Xmx50m</runtime.jvm.options>
+        <runtime.options>${commandlineArgs.options}</runtime.options>
+        <remote.host.name/>
+        <remote.dir/>
     </properties>
 
-    <profiles>
-        <profile>
-            <id>with_built_in_javafx</id>
-            <activation>
-                <jdk>[1.8,10]</jdk>
-            </activation>
-        </profile>
-
-        <profile>
-            <id>with_openjfx_from_maven_central</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <dependencies>
-                <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
-                <dependency>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-controls</artifactId>
-                    <version>${openjfx.version}</version>
-                    <type>pom</type>
-                </dependency>
-                <dependency>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-media</artifactId>
-                    <version>${openjfx.version}</version>
-                    <type>pom</type>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
+    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>${javac.source}</source>
-                    <target>${javac.target}</target>
-                </configuration>
+                <version>3.8.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -86,22 +70,74 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>com.chrisnewland.demofx.DemoFXApplication</mainClass>
-                            <cleanupDaemonThreads>false</cleanupDaemonThreads>
-                            <classpathScope>compile</classpathScope>
-                        </configuration>
-                    </execution>
-                </executions>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.plugin.version}</version>
+                <configuration>
+                    <mainClass>${main.class}</mainClass>
+                    <options>${runtime.jvm.options}</options>
+                    <commandlineArgs>${commandlineArgs.space.options}</commandlineArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.gluonhq</groupId>
+                <artifactId>client-maven-plugin</artifactId>
+                <version>${client.plugin.version}</version>
+                <configuration>
+                    <target>${client.target}</target>
+                    <mainClass>${main.class}</mainClass>
+                    <runtimeArgs>${runtime.options}</runtimeArgs>
+                    <remoteHostName>${remote.host.name}</remoteHostName>
+                    <remoteDir>${remote.dir}</remoteDir>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>pi</id>
+            <properties>
+                <client.target>linux-aarch64</client.target>
+                <remote.host.name>pi@raspberrypi.local</remote.host.name>
+                <remote.dir>/home/pi/Downloads/DemoFX/</remote.dir>
+                <remote.sdk.path>/opt/javafx-sdk-17</remote.sdk.path>
+                <runtime.jvm.options>-Dmonocle.egl.lib=${remote.sdk.path}/lib/libgluon_drm-1.1.4.so,-Dmonocle.platform=EGL,-Duse.egl=true,-Dembedded=monocle,-Dglass.platform=Monocle,-Dcom.sun.javafx.isEmbedded=true,-Dmonocle.input.touchRadius=1,-Dprism.verbose=true</runtime.jvm.options>
+                <runtime.options>-Dmonocle.platform=EGL,-Duse.egl=true,-Dembedded=monocle,-Dglass.platform=Monocle,-Dcom.sun.javafx.isEmbedded=true,-Dmonocle.input.touchRadius=1,${commandlineArgs.options}</runtime.options>
+            </properties>
+        </profile>
+        <profile>
+            <id>sdk</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-base</artifactId>
+                    <version>${javafx.version}</version>
+                    <scope>system</scope>
+                    <systemPath>${remote.sdk.path}/lib/javafx.base.jar</systemPath>
+                </dependency>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-graphics</artifactId>
+                    <version>${javafx.version}</version>
+                    <scope>system</scope>
+                    <systemPath>${remote.sdk.path}/lib/javafx.graphics.jar</systemPath>
+                </dependency>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-controls</artifactId>
+                    <version>${javafx.version}</version>
+                    <scope>system</scope>
+                    <systemPath>${remote.sdk.path}/lib/javafx.controls.jar</systemPath>
+                </dependency>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-media</artifactId>
+                    <version>${javafx.version}</version>
+                    <scope>system</scope>
+                    <systemPath>${remote.sdk.path}/lib/javafx.media.jar</systemPath>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
